сверстал header в темной теме

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,11 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --accent-color-transparent: rgba(255, 0, 112, 0.40);
+  --text-color: #F1B2CE;
+  --text-title-decor: #000028;
+}
