--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,228 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: url(/images/cover-image-dark.png);
+  background-color: #000028;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.header {
+  min-inline-size: 375px;
+  position: relative;
+  block-size: calc(668 / 375 * 100vi);
+  padding: 10px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-areas:
+    "nav"
+    "title"
+    "description";
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent-color, #FF0070);
+  border-right: 1px solid var(--accent-color, #FF0070);
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent-color, #FF0070);
+  border-left: 1px solid var(--accent-color, #FF0070);
+}
+
+.header__theme-menu {
+  grid-area: nav;
+  align-self: center;
+  justify-self: end;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  appearance: none;
+  height: 26px;
+  padding: 0px 13px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  background-color: transparent;
+  border: none;
+  color: var(--accent-color, #FF0070);
+  font-family: "IBM Plex Mono", sans-serif;
+  text-align: center;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px; /* 100% */
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--accent-color-transparent, rgba(255, 0, 112, 0.40));
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--accent-color, #FF0070);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color, #FF0070);
+}
+
+.header__title {
+  grid-area: title;
+  color: var(--title-color, #DB00FF);
+  text-shadow: 4px 4px 0px var(--accent-color, #FF0070);
+  font-family: "IBM Plex Mono", sans-serif;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: bold;
+  line-height: 82.5%;
+}
+
+.header__description {
+  grid-area: description;
+  align-self: center;
+  justify-self: end;
+  inline-size: clamp(355px, (100vi - 20px) / 2, (100vi - 20px) / 2);
+}
+
+.title-decor {
+  color: var(--text-title-decor);
+  font-family: "IBM Plex Mono", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 23.4px; /* 130% */
+  background-color: var(--accent-color, #FF0070);
+}
+
+.header__rec::before {
+  position: absolute;
+  content: "REC";
+  top: 10px;
+  right: 38px;
+  color: var(--accent-color, #FF0070);
+  text-align: center;
+  font-family: "IBM Plex Mono", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px; /* 138.889% */
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  top: 18px;
+  right: 19px;
+  background-color: var(--accent-color, #FF0070);
+  box-shadow: 0px 0px 4px 2px var(--accent-color, #FF0070);
+}
+
+@media (768px <= width < 1024px) {
+  .header {
+    min-inline-size: 768px;
+    block-size: calc(4 / 3 * 100vi);
+    padding: 20px;
+  }
+
+  .header::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .header::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    position: relative;
+    right: 20px;
+  }
+
+  .header__description {
+    inline-size: calc((100vi - 40px) / 2);
+  }
+
+  .header__rec::before {
+    top: 20px;
+    right: 48px;
+  }
+  
+  .header__rec::after {
+    top: 28px;
+    right: 29px;
+  }
+} 
+
+@media (width >= 1024px) {
+  .header {
+    min-inline-size: 1024px;
+    block-size: calc(3 / 4 * 100vi);
+    padding: 20px;
+  }
+
+  .header::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .header::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header__description {
+    inline-size: calc((100vi - 40px) / 2);
+  }
+
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    position: relative;
+    right: 20px;
+  }
+
+  .header__theme-menu {
+    align-self: start;
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header__rec::before {
+    top: 20px;
+    right: 48px;
+  }
+  
+  .header__rec::after {
+    top: 28px;
+    right: 29px;
+  }
 }
