--- a/styles/style.css
+++ b/styles/style.css
@@ -2,22 +2,15 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  background-image: url(/images/cover-image-dark.png);
-  background-color: #000028;
+  background-image: var(
+    --background-image,
+    url(../images/cover-image-dark.png)
+  );
+  background-color: var(--background-color, #000028);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-.theme-dark .page {
-  background-image: url(/images/cover-image-dark.png);
-  background-color: #000028;
-}
-
-.theme-light .page {
-  background-image: url(/images/cover-image-light.png);
-  background-color: #FFF1F7;;
 }
 
 .header {
