--- a/styles/light.css
+++ b/styles/light.css
@@ -4,33 +4,37 @@
   переключая тему
 */
 
-:root.theme-light {
-  /* Переменные светлой темы */    
-  --title-color: #ffc2e6;
-  --accent-color: #ff8dcb;
-  --accent-color-transparent: rgba(50, 49, 45, 0.4);
-  --text-color: #353430;
-  --text-title-decor: #353430;
-}
-
-/* Остальные стили */
-
-@media (prefers-color-scheme: light) {
-:root {
-      /* Дублируем переменные светлой темы */    
-      --title-color: #ffc2e6;
-      --accent-color: #ff8dcb;
-      --accent-color-transparent: rgba(50, 49, 45, 0.4);
-      --text-color: #353430;
-      --text-title-decor: #353430;
-  }
-}
-
-/* Остальные стили */ 
-
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --accent-color-transparent: rgba(50, 49, 45, 0.4);
+  --text-color: #353430;
+  --text-title-decor: #353430;
+  --background-image: url(../images/cover-image-light.png);
+  --background-color: #fff1f7;
+}
+
+.page.theme_light .header__rec {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Дублируем переменные светлой темы */
+    --title-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --accent-color-transparent: rgba(50, 49, 45, 0.4);
+    --text-color: #353430;
+    --text-title-decor: #353430;
+    --background-image: url(../images/cover-image-light.png);
+    --background-color: #fff1f7;
+  }
+
+  .page.theme_auto .header__rec {
+    display: none;
+  }
 }
