--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,28 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-color: var(--background-color, #000028);
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-image: var(
     --background-image,
     url(../images/cover-image-dark.png)
   );
-  background-color: var(--background-color, #000028);
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 .header {
   position: relative;
-  block-size: calc(668 / 375 * 100vi);
-  padding: 10px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   grid-template-areas:
     "nav"
     "title"
     "description";
+  padding: 10px;
+  block-size: calc(668 / 375 * 100vi);
 }
 
 .decorated-zone::before {
@@ -49,8 +49,8 @@
 
 .header__theme-menu {
   grid-area: nav;
-  align-self: center;
   justify-self: end;
+  align-self: center;
 }
 
 .header__theme-menu-list {
@@ -60,21 +60,21 @@
 }
 
 .header__theme-menu-button {
-  appearance: none;
-  height: 26px;
-  padding: 0px 13px;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
-  background-color: transparent;
+  height: 26px;
   border: none;
+  padding: 0px 13px;
   color: var(--accent-color, #ff0070);
   font-family: "IBM Plex Mono", sans-serif;
-  text-align: center;
   font-weight: normal;
   font-size: 18px;
   line-height: 18px; /* 100% */
+  text-align: center;
   text-transform: lowercase;
+  background-color: transparent;
+  appearance: none;
 }
 
 .header__theme-menu-button:hover {
@@ -87,8 +87,8 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: none;
   border-bottom: 1px solid var(--accent-color, #ff0070);
+  outline: none;
 }
 
 .header__theme-menu-button_active {
@@ -99,25 +99,25 @@
 .header__title {
   grid-area: title;
   color: var(--title-color, #db00ff);
-  text-shadow: 4px 4px 0px var(--accent-color, #ff0070);
   font-family: "IBM Plex Mono", sans-serif;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: bold;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
+  text-shadow: 4px 4px 0px var(--accent-color, #ff0070);
 }
 
 .header__description {
   grid-area: description;
-  align-self: center;
   justify-self: end;
+  align-self: center;
   inline-size: clamp(355px, (100vi - 20px) / 2, (100vi - 20px) / 2);
 }
 
 .title-decor {
   color: var(--text-title-decor);
   font-family: "IBM Plex Mono", sans-serif;
-  font-size: 18px;
   font-weight: bold;
+  font-size: 18px;
   line-height: 23.4px; /* 130% */
   background-color: var(--accent-color, #ff0070);
 }
@@ -127,34 +127,34 @@
 }
 
 .header__rec::before {
-  position: absolute;
   content: "REC";
+  position: absolute;
   top: 10px;
   right: 38px;
   color: var(--accent-color, #ff0070);
-  text-align: center;
   font-family: "IBM Plex Mono", sans-serif;
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: 25px; /* 138.889% */
+  text-align: center;
 }
 
 .header__rec::after {
   content: "";
   position: absolute;
+  top: 18px;
+  right: 19px;
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  top: 18px;
-  right: 19px;
-  background-color: var(--accent-color, #ff0070);
   box-shadow: 0px 0px 4px 2px var(--accent-color, #ff0070);
+  background-color: var(--accent-color, #ff0070);
 }
 
 @media (width >= 768px) {
   .header {
-    block-size: calc(4 / 3 * 100vi);
     padding: 20px;
+    block-size: calc(4 / 3 * 100vi);
   }
 
   .decorated-zone::before {
@@ -168,9 +168,9 @@
   }
 
   .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     position: relative;
     right: 20px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .header__description {
@@ -194,8 +194,8 @@
   }
 
   .header__theme-menu {
-    align-self: start;
     justify-self: center;
+    align-self: start;
   }
 
   .header__theme-menu-list {
@@ -204,19 +204,19 @@
 }
 
 .section-decor {
+  display: grid;
+  grid-template-rows: min-content;
+  grid-auto-rows: min-content;
+  gap: 20px;
   margin-block-start: 30px;
   padding: 10px;
-  display: grid;
-  grid-template-rows: fit-content;
-  grid-auto-rows: fit-content;
-  gap: 20px;
 }
 
 .section-title-decor {
   color: var(--accent-color, #ff0070);
   font-family: "IBM Plex Mono", sans-serif;
-  font-size: 18px;
   font-weight: bold;
+  font-size: 18px;
   line-height: 23.4px; /* 130% */
 }
 
@@ -224,8 +224,8 @@
   margin-block-start: 10px;
   color: var(--text-color, #f1b2ce);
   font-family: "IBM Plex Mono", sans-serif;
-  font-size: 18px;
   font-weight: normal;
+  font-size: 18px;
   line-height: 23.4px; /* 130% */
 }
 
@@ -257,9 +257,9 @@
 
 @media (width >= 768px) {
   .section-decor {
+    grid-template-columns: 1fr 2fr;
     margin-block-start: 40px;
     padding: 20px;
-    grid-template-columns: 1fr 2fr;
   }
 
   .section-1-why .article-decor {
@@ -283,9 +283,9 @@
   }
 
   .section-4-gallery {
-    gap: 20px;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: fit-content 1fr 1fr 1fr;
+    grid-template-rows: min-content 1fr 1fr 1fr;
+    gap: 20px;
   }
 
   .section-4-gallery .title-decor {
@@ -294,9 +294,9 @@
   }
 
   .section-4-gallery .picture-decor {
+    object-fit: cover;
     inline-size: 100%;
     block-size: 100%;
-    object-fit: cover;
   }
 
   .section-4-gallery .picture-decor:nth-child(2) {
@@ -345,7 +345,7 @@
 @media (width >= 1024px) {
   .section-2-what {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: fit-content;
+    grid-template-rows: min-content;
   }
 
   .section-2-what .section-title-decor {
@@ -358,11 +358,11 @@
 }
 
 .footer {
+  position: relative;
+  display: grid;
   margin-block-start: 30px;
   padding: 10px;
-  position: relative;
   block-size: calc(668 / 375 * 100vi);
-  display: grid;
 }
 
 .footer__title {
@@ -371,15 +371,15 @@
 
 @media (width >= 768px) {
   .footer {
-    block-size: calc(4 / 3 * 100vi);
     margin-block-start: 40px;
     padding: 20px;
+    block-size: calc(4 / 3 * 100vi);
   }
 
   .footer__title {
-    text-shadow: 2px 2px 0px var(--accent-color, #ff0070);
     position: relative;
     right: 0px;
+    text-shadow: 2px 2px 0px var(--accent-color, #ff0070);
   }
 }
 
