--- a/styles/style.css
+++ b/styles/style.css
@@ -284,7 +284,7 @@
 
   .section-4-gallery {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: min-content 1fr 1fr 1fr;
+    grid-template-rows: fit-content 1fr 1fr 1fr;
     gap: 20px;
   }
 
