Внёс правки после ревью

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -16,4 +16,8 @@
   --text-title-decor: #000028;
   --background-image: url(../images/cover-image-dark.png);
   --background-color: #000028;
+  --nav-color: #ff0070;
+  --decorative-elements-color: #ff0070;
+  --section-title-color: #ff0070;
+  --logo-accent-color: #ff0070;
 }
