--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
     "title"
     "description";
   padding: 10px;
-  block-size: calc(668 / 375 * 100vi);
+  block-size: clamp(668px, (668 / 375 * 100vi), 100vh);
 }
 
 .decorated-zone::before {
@@ -32,8 +32,8 @@
   right: 10px;
   width: 25px;
   height: 25px;
-  border-top: 1px solid var(--accent-color, #ff0070);
-  border-right: 1px solid var(--accent-color, #ff0070);
+  border-top: 1px solid var(--decorative-elements-color, #ff0070);
+  border-right: 1px solid var(--decorative-elements-color, #ff0070);
 }
 
 .decorated-zone::after {
@@ -43,8 +43,8 @@
   left: 10px;
   width: 25px;
   height: 25px;
-  border-bottom: 1px solid var(--accent-color, #ff0070);
-  border-left: 1px solid var(--accent-color, #ff0070);
+  border-bottom: 1px solid var(--decorative-elements-color, #ff0070);
+  border-left: 1px solid var(--decorative-elements-color, #ff0070);
 }
 
 .header__theme-menu {
@@ -63,11 +63,11 @@
   flex-shrink: 0;
   justify-content: center;
   align-items: center;
-  height: 26px;
+  min-height: 26px;
   border: none;
   padding: 0px 13px;
-  color: var(--accent-color, #ff0070);
-  font-family: "IBM Plex Mono", sans-serif;
+  color: var(--nav-color, #ff0070);
+  font-family: "IBM Plex Mono", monospace;
   font-weight: normal;
   font-size: 18px;
   line-height: 18px; /* 100% */
@@ -88,22 +88,21 @@
 
 .header__theme-menu-button:focus-visible {
   border-bottom: 1px solid var(--accent-color, #ff0070);
-  outline: none;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color, #ff0070);
+  border: 1px solid var(--nav-color, #ff0070);
   pointer-events: none;
 }
 
-.header__title {
+.logo {
   grid-area: title;
   color: var(--title-color, #db00ff);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--logo-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
   line-height: 82.5%;
-  text-shadow: 4px 4px 0px var(--accent-color, #ff0070);
+  text-shadow: 4px 4px 0px var(--logo-accent-color, #ff0070);
 }
 
 .header__description {
@@ -115,7 +114,7 @@
 
 .title-decor {
   color: var(--text-title-decor);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
   font-size: 18px;
   line-height: 23.4px; /* 130% */
@@ -127,16 +126,17 @@
 }
 
 .header__rec::before {
-  content: "REC";
+  content: "rec";
   position: absolute;
   top: 10px;
   right: 38px;
   color: var(--accent-color, #ff0070);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   font-size: 18px;
   line-height: 25px; /* 138.889% */
   text-align: center;
+  text-transform: uppercase;
 }
 
 .header__rec::after {
@@ -154,7 +154,7 @@
 @media (width >= 768px) {
   .header {
     padding: 20px;
-    block-size: calc(4 / 3 * 100vi);
+    block-size: clamp(668px, (4 / 3 * 100vi), 100vh);
   }
 
   .decorated-zone::before {
@@ -167,10 +167,9 @@
     left: 20px;
   }
 
-  .header__title {
+  .logo {
     position: relative;
     right: 20px;
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .header__description {
@@ -190,7 +189,7 @@
 
 @media (width >= 1024px) {
   .header {
-    block-size: calc(3 / 4 * 100vi);
+    block-size: clamp(668px, (3 / 4 * 100vi), 100vh);
   }
 
   .header__theme-menu {
@@ -205,16 +204,14 @@
 
 .section-decor {
   display: grid;
-  grid-template-rows: min-content;
-  grid-auto-rows: min-content;
   gap: 20px;
   margin-block-start: 30px;
   padding: 10px;
 }
 
 .section-title-decor {
-  color: var(--accent-color, #ff0070);
-  font-family: "IBM Plex Mono", sans-serif;
+  color: var(--section-title-color, #ff0070);
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
   font-size: 18px;
   line-height: 23.4px; /* 130% */
@@ -223,7 +220,7 @@
 .paragraph-decor {
   margin-block-start: 10px;
   color: var(--text-color, #f1b2ce);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: normal;
   font-size: 18px;
   line-height: 23.4px; /* 130% */
@@ -231,11 +228,11 @@
 
 .link-decor {
   text-decoration: none;
-  text-shadow: 1px 1px var(--accent-color, #ff0070);
+  text-shadow: 2.1px 2.1px var(--accent-color, #ff0070);
 }
 
 .link-decor:hover {
-  text-decoration: underline;
+  border-bottom: 1px solid var(--text-color, #f1b2ce);
   cursor: pointer;
 }
 
@@ -247,7 +244,7 @@
   outline: 1px solid var(--text-color, #f1b2ce);
 }
 
-.section-4-gallery {
+.section-gallery {
   gap: 10px;
 }
 
@@ -262,72 +259,72 @@
     padding: 20px;
   }
 
-  .section-1-why .article-decor {
+  .section-why .article-decor {
     grid-column-start: 2;
     grid-column-end: 3;
   }
 
-  .section-3-how .article-decor {
+  .section-how .article-decor {
     grid-column-start: 2;
     grid-column-end: 3;
   }
 
-  .section-3-how .section-title-decor {
+  .section-how .section-title-decor {
     grid-row-start: 1;
     grid-row-end: 3;
   }
 
-  .section-3-how .title-decor {
+  .section-how .title-decor {
     grid-row-start: 1;
     grid-row-end: 2;
   }
 
-  .section-4-gallery {
+  .section-gallery {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: fit-content 1fr 1fr 1fr;
     gap: 20px;
   }
 
-  .section-4-gallery .title-decor {
+  .section-gallery .title-decor {
     grid-column-start: 1;
     grid-column-end: 4;
   }
 
-  .section-4-gallery .picture-decor {
+  .section-gallery .picture-decor {
     object-fit: cover;
     inline-size: 100%;
     block-size: 100%;
   }
 
-  .section-4-gallery .picture-decor:nth-child(2) {
+  .section-gallery .picture-decor:nth-child(2) {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
   }
 
-  .section-4-gallery .picture-decor:nth-child(3) {
+  .section-gallery .picture-decor:nth-child(3) {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 4;
   }
 
-  .section-4-gallery .picture-decor:nth-child(4) {
+  .section-gallery .picture-decor:nth-child(4) {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 5;
   }
 
-  .section-4-gallery .picture-decor:nth-child(5) {
+  .section-gallery .picture-decor:nth-child(5) {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
   }
 
-  .section-4-gallery .picture-decor:nth-child(6) {
+  .section-gallery .picture-decor:nth-child(6) {
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 4;
@@ -336,23 +333,24 @@
 }
 
 @media (1024px > width >= 768px) {
-  .section-2-what .article-decor {
+  .section-what .article-decor {
     grid-column-start: 1;
     grid-column-end: 3;
   }
 }
 
 @media (width >= 1024px) {
-  .section-2-what {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: min-content;
+  .section-what {
+    grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
+    grid-auto-columns: minmax(315px, 1fr);
+    grid-auto-flow: column;
   }
 
-  .section-2-what .section-title-decor {
+  .section-what .section-title-decor {
     grid-row-start: 1;
   }
 
-  .section-2-what .article-decor {
+  .section-what .article-decor {
     grid-row-start: 2;
   }
 }
@@ -362,29 +360,28 @@
   display: grid;
   margin-block-start: 30px;
   padding: 10px;
-  block-size: calc(668 / 375 * 100vi);
+  block-size: clamp(668px, (668 / 375 * 100vi), 100vh);
 }
 
 .footer__title {
-  text-shadow: 2px 2px 0px var(--accent-color, #ff0070);
+  text-shadow: 2px 2px 0px var(--logo-accent-color, #ff0070);
 }
 
 @media (width >= 768px) {
   .footer {
     margin-block-start: 40px;
     padding: 20px;
-    block-size: calc(4 / 3 * 100vi);
+    block-size: clamp(668px, (4 / 3 * 100vi), 100vh);
   }
 
   .footer__title {
     position: relative;
     right: 0px;
-    text-shadow: 2px 2px 0px var(--accent-color, #ff0070);
   }
 }
 
 @media (width >= 1024px) {
   .footer {
-    block-size: calc(3 / 4 * 100vi);
+    block-size: clamp(668px, (3 / 4 * 100vi), 100vh);
   }
 }
