--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,15 @@
   --text-title-decor: #000028;
   --background-image: url(../images/cover-image-dark.png);
   --background-color: #000028;
+  --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --nav-color: #ff0070;
+  --decorative-elements-color: #ff0070;
+  --section-title-color: #ff0070;
+  --logo-accent-color: #ff0070;
+}
+
+@media (width >= 768px) {
+  :root {
+    --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
