--- a/styles/dark.css
+++ b/styles/dark.css
@@ -20,4 +20,5 @@
   --decorative-elements-color: #ff0070;
   --section-title-color: #ff0070;
   --logo-accent-color: #ff0070;
+  --rec-visibility: visible;
 }
