--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
     "title"
     "description";
   padding: 10px;
-  block-size: clamp(668px, (668 / 375 * 100vi), 100vh);
+  block-size: max(100vh, 668px);
 }
 
 .decorated-zone::before {
@@ -87,7 +87,7 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--accent-color, #ff0070);
+  border-bottom: 1px solid var(--nav-color, #ff0070);
 }
 
 .header__theme-menu-button_active {
@@ -137,6 +137,7 @@
   line-height: 25px; /* 138.889% */
   text-align: center;
   text-transform: uppercase;
+  visibility: var(--rec-visibility, visible);
 }
 
 .header__rec::after {
@@ -149,12 +150,13 @@
   border-radius: 50%;
   box-shadow: 0px 0px 4px 2px var(--accent-color, #ff0070);
   background-color: var(--accent-color, #ff0070);
+  visibility: var(--rec-visibility, visible);
 }
 
 @media (width >= 768px) {
   .header {
     padding: 20px;
-    block-size: clamp(668px, (4 / 3 * 100vi), 100vh);
+    block-size: max(100vh, 1024px);
   }
 
   .decorated-zone::before {
@@ -189,7 +191,7 @@
 
 @media (width >= 1024px) {
   .header {
-    block-size: clamp(668px, (3 / 4 * 100vi), 100vh);
+    block-size: max(100vh, 768px);
   }
 
   .header__theme-menu {
@@ -341,17 +343,12 @@
 
 @media (width >= 1024px) {
   .section-what {
-    grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
-    grid-auto-columns: minmax(315px, 1fr);
-    grid-auto-flow: column;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .section-what .section-title-decor {
-    grid-row-start: 1;
-  }
-
-  .section-what .article-decor {
-    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: -1;
   }
 }
 
@@ -360,7 +357,7 @@
   display: grid;
   margin-block-start: 30px;
   padding: 10px;
-  block-size: clamp(668px, (668 / 375 * 100vi), 100vh);
+  block-size: max(100vh, 668px);
 }
 
 .footer__title {
@@ -371,7 +368,7 @@
   .footer {
     margin-block-start: 40px;
     padding: 20px;
-    block-size: clamp(668px, (4 / 3 * 100vi), 100vh);
+    block-size: max(100vh, 1024px);
   }
 
   .footer__title {
@@ -382,6 +379,6 @@
 
 @media (width >= 1024px) {
   .footer {
-    block-size: clamp(668px, (3 / 4 * 100vi), 100vh);
+    block-size: max(100vh, 768px);
   }
 }
