--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,7 @@
   position: absolute;
   top: 10px;
   right: 38px;
+  visibility: var(--rec-visibility, visible);
   color: var(--accent-color, #ff0070);
   font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
@@ -137,7 +138,6 @@
   line-height: 25px; /* 138.889% */
   text-align: center;
   text-transform: uppercase;
-  visibility: var(--rec-visibility, visible);
 }
 
 .header__rec::after {
@@ -145,12 +145,12 @@
   position: absolute;
   top: 18px;
   right: 19px;
+  visibility: var(--rec-visibility, visible);
   width: 9px;
   height: 9px;
   border-radius: 50%;
   box-shadow: 0px 0px 4px 2px var(--accent-color, #ff0070);
   background-color: var(--accent-color, #ff0070);
-  visibility: var(--rec-visibility, visible);
 }
 
 @media (width >= 768px) {
@@ -349,6 +349,7 @@
   .section-what .section-title-decor {
     grid-column-start: 1;
     grid-column-end: -1;
+    max-inline-size: calc(1 / 3 * (100% - 40px));
   }
 }
 
